# portfolio_site

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Session.vim  Trunk.toml  build.sh  cloudbuild.yaml  index.html  nginx.conf  rustfmt.toml  settings  test-local.sh
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  auto-update.yml  ci-quality.yml  ci.yml  dependabot-automerge.yml  dependabot-post-merge.yml  dependabot_automerge.yml  deploy-app.yml  deploy.yml  lint.yml  maintenance.yml  security.yml  stale.yml  terraform.yml  test-deploy.yml  test-terraform.yml
docs/: DEPLOYMENT.md  GCP_SETUP.md  GITHUB_SECRETS.md
scripts/: build-and-deploy.sh  cleanup-images.sh  rollback.sh  setup-gcs-backend.sh  setup-github-sa.sh  terraform-check.sh
src/: lib.rs  main.rs
src/components/: button.rs  card.rs  code_block.rs  loading.rs  mod.rs
src/components/buttons/: action_button.rs  mod.rs  social_button.rs  tooltip_button.rs
src/components/cards/: code_card.rs  mod.rs  project_card.rs
src/components/layout/: mod.rs  page_layout.rs
src/constants/: mod.rs  routes.rs  social.rs  ui.rs
src/page_builder/: alula_bible_page.rs  auto_ingest_page.rs  code_show_case_elements.rs  code_show_case_page.rs  contact_page.rs  css_to_rust_converter_page.rs  firo_logger_page.rs  game_score_tracker_page.rs  gitlab_terraform_page.rs  header_builder.rs  home_page.rs  info_page.rs  inspekt_showcase_page.rs  landing_page.rs  mod.rs  portfolio_site_page.rs  rust_site.rs  stock_tracker_page.rs
src/routing/: mod.rs  router.rs
src/services/: file_service.rs  markdown_service.rs  mod.rs
src/styles/: README.md  index.css  mod.rs  utils.rs
src/theme/: mod.rs  provider.rs  styles.rs  types.rs
src/utils/: button_elements.rs  card_elements.rs  file_reader.rs  image_utils.rs  layout.rs  mark_down_utils.rs  mod.rs  navbar.rs  pages.rs  router.rs
static/: Notification.py  style.css
static/css/: buttons.css  cardstyles.css  imagestyle.css  index.css  navigationstyles.css  styles.css
static/inspekt/: test_report.html
static/styles/: index.css
terraform/: .terraform.tfstate.lock.info  artifact-registry.tf  backend.tf  cloud-dns.tf  cloud-run.tf  docker-build.tf  domain-mapping.tf  iam.tf  imports.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf  versions.tf
(+48 files in other folders)
