[package]
name    = "cv_portfolio_site"
version = "0.1.0"
edition = "2021"

[dependencies]
yew                  = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net             = "^0.6"
web-sys              = "0.3.70"
pulldown-cmark       = "0.12.0"
wasm-bindgen-futures = "0.4.43"
yew-layout           = "0.7.3"
yew-router           = { git = "https://github.com/yewstack/yew.git" }

# Modern styling and theming
stylist      = { version = "0.13", features = ["yew"] }
gloo-utils   = "0.2"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
js-sys       = "0.3"

# Enhanced functionality
yew-hooks   = "0.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
gloo-timers = "0.3"

[profile.release]
lto           = true
opt-level     = "s"
codegen-units = 1
strip         = true
panic         = "abort"

[profile.dev]
incremental   = true
codegen-units = 256
opt-level     = 0
