[package]
name    = "cv_portfolio_site"
version = "0.1.0"
edition = "2021"

[dependencies]
yew                  = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net             = "0.6.0"
web-sys              = "0.3.77"
pulldown-cmark       = "0.13.0"
wasm-bindgen-futures = "0.4.50"
yew-layout           = "0.7.3"
yew-router           = { git = "https://github.com/yewstack/yew.git" }

# Modern styling and theming
stylist      = { version = "0.13.0", features = ["yew"] }
gloo-utils   = "0.2.0"
gloo-storage = "0.3.0"
wasm-bindgen = "0.2.100"
js-sys       = "0.3.77"

# Enhanced functionality
yew-hooks   = "0.3.4"
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = "1.0.143"
gloo-timers = "0.3.0"

[profile.release]
lto           = true
opt-level     = "s"
codegen-units = 1
strip         = true
panic         = "abort"

[profile.dev]
incremental   = true
codegen-units = 256
opt-level     = 0
