[package]
name    = "cv_portfolio_site"
version = "0.1.9"
edition = "2021"

[dependencies]
yew                  = { version = "0.21", features = ["csr"] }
gloo-net             = "^0.6"
web-sys              = "0.3.77"
pulldown-cmark       = "0.13.0"
wasm-bindgen-futures = "0.4.50"
yew-layout           = "0.7.3"
yew-router           = "0.18"
